02/self-study/odoo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
        - name: odoo
          image: docker.io/bitnami/odoo:16
          ports:
            - containerPort: 8069
