02/self-study/odoo-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: odoo
spec:
  ports:
    - port: 80
      targetPort: 8069
  selector:
    app: odoo
